<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pb_loading"
        android:visibility="gone" >
        <ProgressBar
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:indeterminate="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/exam_details" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/exam_back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:tint="@color/testpress_color_primary"
                android:gravity="center"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                style="@style/TestpressExamDetailHeading"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:text="Aptitude Analytical Maths (NBE Template)"
                android:id="@+id/exam_title" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="10dp" >
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dip"
                android:background="#cccccc" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/TestpressExamDetailRow" >
                    <TextView
                        style="@style/TestpressExamDetailSubHeading"
                        android:text="@string/testpress_no_of_questions" />
                    <TextView
                        style="@style/TestpressExamDetailValue"
                        android:id="@+id/number_of_questions"
                        android:text="100" />
                </LinearLayout>

                <LinearLayout style="@style/TestpressExamDetailRow" >
                    <TextView
                        style="@style/TestpressExamDetailSubHeading"
                        android:text="@string/testpress_duration" />
                    <TextView
                        style="@style/TestpressExamDetailValue"
                        android:id="@+id/exam_duration"
                        android:text="0:30:00" />
                </LinearLayout>

                <LinearLayout style="@style/TestpressExamDetailRow" >
                    <TextView
                        style="@style/TestpressExamDetailSubHeading"
                        android:text="@string/testpress_mark_per_question" />
                    <TextView
                        style="@style/TestpressExamDetailValue"
                        android:id="@+id/mark_per_question"
                        android:text="1" />
                </LinearLayout>

                <LinearLayout style="@style/TestpressExamDetailRow" >
                    <TextView
                        style="@style/TestpressExamDetailSubHeading"
                        android:text="@string/testpress_negative_mark" />
                    <TextView
                        style="@style/TestpressExamDetailValue"
                        android:id="@+id/negative_marks"
                        android:text="1" />
                </LinearLayout>

                <LinearLayout style="@style/TestpressExamDetailRow"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:visibility="gone"
                    android:id="@+id/description" >

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp" >
                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="1dip"
                            android:background="#cccccc" />
                    </LinearLayout>

                    <TextView
                        style="@style/TestpressExamDetailSubHeading"
                        android:text="@string/testpress_description" />

                    <TextView
                        style="@style/TestpressExamDetailValue"
                        android:id="@+id/descriptionContent"
                        android:layout_width="match_parent"
                        android:textStyle="normal"
                        android:text="Abdul Kalam (15 October 1931 – 27 July 2015) was the 11th President of India from 2002 to 2007. A career scientist turned reluctant politician, Kalam was born and raised in Rameswaram, Tamil Nadu, and studied physics and aerospace engineering. He spent the next four decades as a scientist and science administrator, mainly at the Defence Research and Development Organisation (DRDO) and Indian Space Research Organisation (ISRO) and was intimately involved in India's civilian space program and military missile development efforts"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center">
                    <View
                        android:layout_width="310dp"
                        android:layout_height="1dip"
                        android:background="#cccccc" />
                </LinearLayout>

                <LinearLayout style="@style/TestpressExamDetailRow" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:tint="#666666"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_thumb_up_black_18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#666666"
                        android:textSize="@dimen/testpress_text_size_xlarge"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="normal"
                        android:text="@string/testpress_all_the_best" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp" >
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dip"
                android:background="#cccccc" />
        </LinearLayout>

        <Button
            android:id="@+id/start_exam"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/testpress_start_exam"
            android:textStyle="bold"
            android:background="@drawable/testpress_green_button"
            android:textColor="#fff"
            android:textSize="@dimen/testpress_text_size_large"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/attempt_actions"
            style="?@android:attr/buttonBarStyle"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="10dp" >

            <Button
                style="?@android:attr/buttonBarButtonStyle"
                android:id="@+id/end_exam"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/testpress_end"
                android:textStyle="bold"
                android:background="@drawable/testpress_red_button"
                android:textColor="#fff"
                android:textSize="@dimen/testpress_text_size_xmedium" />

            <Button
                style="?@android:attr/buttonBarButtonStyle"
                android:id="@+id/resume_exam"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/testpress_resume"
                android:textStyle="bold"
                android:background="@drawable/testpress_green_button"
                android:textColor="#fff"
                android:textSize="@dimen/testpress_text_size_xmedium" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/testpress_empty_view" />

</LinearLayout>
